--- a/index.html
+++ b/index.html
@@ -2,39 +2,227 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Cybersecurity Defender Demo</title>
-  <link rel="stylesheet" href="style.css">
+  <title>MellowTech AI Cybersecurity Dashboard</title>
+  <style>
+    body {
+      font-family: "Segoe UI", Arial, sans-serif;
+      background-color: #0d1117;
+      color: #f5f5f5;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: linear-gradient(90deg, #0a84ff, #0ad4a6);
+      padding: 25px;
+      text-align: center;
+      color: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.5em;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-size: 1.2em;
+    }
+    .container {
+      max-width: 1100px;
+      margin: 30px auto;
+      padding: 20px;
+      background: #161b22;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.5);
+    }
+    h2 {
+      color: #0ad4a6;
+      border-bottom: 2px solid #0ad4a6;
+      padding-bottom: 5px;
+    }
+    .status {
+      font-size: 1.2em;
+      margin: 15px 0;
+    }
+    .status span {
+      font-weight: bold;
+      padding: 5px 10px;
+      border-radius: 5px;
+    }
+    .online { background: #0ad4a6; color: black; }
+    .alert { background: #ff3b3b; color: white; }
+    .threat-log {
+      background: black;
+      color: #00ff00;
+      font-family: "Courier New", monospace;
+      padding: 15px;
+      border-radius: 8px;
+      height: 250px;
+      overflow-y: auto;
+      border: 1px solid #0ad4a6;
+    }
+    .btn {
+      background: #0a84ff;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin: 10px 5px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+      font-weight: bold;
+    }
+    .btn:hover {
+      background: #0ad4a6;
+      transform: scale(1.05);
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+    .card {
+      background: #0f1620;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      margin-top: 20px;
+      color: #888;
+    }
+    canvas {
+      width: 100% !important;
+      max-height: 250px;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>🛡️ MellowTech AI Cybersecurity</h1>
+    <p>Real-Time Threat Detection • Automated Response • Predictive Defense</p>
+  </header>
+
   <div class="container">
-    <header>
-      <h1>🛡️ AI Cybersecurity Defender</h1>
-      <p>Real-Time Threat Detection & Automated Response</p>
-    </header>
+    <h2>System Overview</h2>
+    <p class="status">Status: <span id="systemStatus" class="online">Online - Monitoring</span></p>
 
-    <main>
-      <section class="status">
-        <h2>System Status</h2>
-        <div id="ai-status" class="status-box">Monitoring...</div>
-      </section>
+    <div class="grid">
+      <!-- Threat Log -->
+      <div class="card">
+        <h3>Threat Log</h3>
+        <div class="threat-log" id="threatLog">[System Initialized]\n</div>
+        <button class="btn" onclick="simulateThreat()">⚡ Simulate Random Threat</button>
+        <button class="btn" onclick="clearLog()">🧹 Clear Log</button>
+        <button class="btn" onclick="detectInput()">🔍 Detect Custom Input</button>
+      </div>
 
-      <section class="log">
-        <h2>Threat Log</h2>
-        <ul id="threat-log"></ul>
-      </section>
+      <!-- Threat Intelligence Feed -->
+      <div class="card">
+        <h3>Threat Intelligence Feed</h3>
+        <ul id="intelFeed"></ul>
+      </div>
 
-      <section class="controls">
-        <button onclick="simulateThreat()">Simulate Threat</button>
-        <button onclick="clearLog()">Clear Log</button>
-      </section>
-    </main>
+      <!-- Attack Simulation -->
+      <div class="card">
+        <h3>Attack Simulation</h3>
+        <button class="btn" onclick="simulateSpecific('DDoS')">🌐 Simulate DDoS</button>
+        <button class="btn" onclick="simulateSpecific('SQL Injection')">💉 Simulate SQL Injection</button>
+        <button class="btn" onclick="simulateSpecific('Malware Upload')">🦠 Simulate Malware</button>
+        <button class="btn" onclick="simulateSpecific('Phishing')">🎣 Simulate Phishing</button>
+      </div>
 
-    <footer>
-      <p>Built for Hackathon 2025 🚀 | Demo by Taione (MellowTech)</p>
-    </footer>
+      <!-- Threat Analytics -->
+      <div class="card">
+        <h3>Threat Analytics</h3>
+        <canvas id="threatChart"></canvas>
+      </div>
+    </div>
   </div>
 
-  <script src="script.js"></script>
+  <footer>
+    Built for Hackathon 2025 🚀 | <b>MellowTech AI Cybersecurity</b>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    const log = document.getElementById("threatLog");
+    const status = document.getElementById("systemStatus");
+    const feed = document.getElementById("intelFeed");
+    let threatData = { DDoS: 0, SQL: 0, Malware: 0, Phishing: 0 };
+
+    // Chart.js for analytics
+    const ctx = document.getElementById("threatChart");
+    const chart = new Chart(ctx, {
+      type: "pie",
+      data: {
+        labels: ["DDoS", "SQL Injection", "Malware", "Phishing"],
+        datasets: [{
+          data: [0,0,0,0],
+          backgroundColor: ["#0a84ff","#ff3b3b","#ffa500","#0ad4a6"]
+        }]
+      }
+    });
+
+    function updateChart() {
+      chart.data.datasets[0].data = [
+        threatData.DDoS, threatData.SQL, threatData.Malware, threatData.Phishing
+      ];
+      chart.update();
+    }
+
+    function addLog(message) {
+      const timestamp = new Date().toLocaleTimeString();
+      log.innerText += `[${timestamp}] ${message}\n`;
+      log.scrollTop = log.scrollHeight;
+    }
+
+    function addIntel(message) {
+      const li = document.createElement("li");
+      li.textContent = message;
+      feed.prepend(li);
+      if (feed.childElementCount > 6) feed.removeChild(feed.lastChild);
+    }
+
+    function simulateThreat() {
+      const threats = ["DDoS", "SQL Injection", "Malware", "Phishing"];
+      const pick = threats[Math.floor(Math.random() * threats.length)];
+      simulateSpecific(pick);
+    }
+
+    function simulateSpecific(type) {
+      addLog(`⚠️ ${type} attempt detected! Deploying countermeasures...`);
+      status.className = "alert";
+      status.innerText = `⚠️ Mitigating ${type}...`;
+      threatData[type === "SQL Injection" ? "SQL" : type]++;
+
+      setTimeout(() => {
+        addLog(`✅ ${type} successfully blocked.`);
+        addIntel(`${type} threat neutralized.`);
+        status.className = "online";
+        status.innerText = "Online - Monitoring";
+        updateChart();
+      }, 2000);
+    }
+
+    function clearLog() {
+      log.innerText = "[System Reset]\n";
+      status.className = "online";
+      status.innerText = "Online - Monitoring";
+    }
+
+    function detectInput() {
+      const input = prompt("Enter suspicious command or text:");
+      if (input) {
+        if (input.toLowerCase().includes("attack") || input.toLowerCase().includes("hack")) {
+          simulateSpecific("SQL Injection");
+        } else {
+          addLog("✅ Input appears safe: " + input);
+        }
+      }
+    }
+  </script>
 </body>
 </html>
