--- a/index.html
+++ b/index.html
@@ -2,227 +2,141 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>MellowTech AI Cybersecurity Dashboard</title>
+  <title>MellowTech AI Cybersecurity Defender</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
-      font-family: "Segoe UI", Arial, sans-serif;
-      background-color: #0d1117;
-      color: #f5f5f5;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background: linear-gradient(90deg, #0a84ff, #0ad4a6);
-      padding: 25px;
-      text-align: center;
-      color: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    }
-    header h1 {
-      margin: 0;
-      font-size: 2.5em;
-    }
-    header p {
-      margin: 5px 0 0;
-      font-size: 1.2em;
-    }
-    .container {
-      max-width: 1100px;
-      margin: 30px auto;
-      padding: 20px;
-      background: #161b22;
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.5);
-    }
-    h2 {
-      color: #0ad4a6;
-      border-bottom: 2px solid #0ad4a6;
-      padding-bottom: 5px;
-    }
-    .status {
-      font-size: 1.2em;
-      margin: 15px 0;
-    }
-    .status span {
-      font-weight: bold;
-      padding: 5px 10px;
-      border-radius: 5px;
-    }
-    .online { background: #0ad4a6; color: black; }
-    .alert { background: #ff3b3b; color: white; }
-    .threat-log {
-      background: black;
-      color: #00ff00;
-      font-family: "Courier New", monospace;
-      padding: 15px;
-      border-radius: 8px;
-      height: 250px;
-      overflow-y: auto;
-      border: 1px solid #0ad4a6;
-    }
-    .btn {
-      background: #0a84ff;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin: 10px 5px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s;
-      font-weight: bold;
-    }
-    .btn:hover {
-      background: #0ad4a6;
-      transform: scale(1.05);
-    }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 20px;
-      margin-top: 20px;
-    }
-    .card {
-      background: #0f1620;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.4);
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      margin-top: 20px;
-      color: #888;
-    }
-    canvas {
-      width: 100% !important;
-      max-height: 250px;
-    }
+    body { font-family: 'Segoe UI', Arial, sans-serif; background-color: #0b0f17; color: #f5f5f5; margin:0; padding:0; }
+    header { background: linear-gradient(90deg, #0a84ff, #0ad4a6); padding:22px; text-align:center; color:white; box-shadow:0 0 18px rgba(0,0,0,0.7); }
+    header h1 { margin:0; font-size:2.4rem; }
+    header p { margin:6px 0 0; font-size:1rem; opacity:.95; }
+
+    .container { max-width:1200px; margin:26px auto; padding:18px; background:#12151b; border-radius:12px; box-shadow:0 0 22px rgba(0,0,0,0.45); }
+    h2 { color:#0ad4a6; border-bottom:2px solid #0ad4a6; padding-bottom:6px; }
+
+    .status { font-size:1.05rem; margin:12px 0; }
+    .status span { font-weight:700; padding:6px 10px; border-radius:6px; display:inline-block; transition: 0.3s; }
+    .online { background:#0ad4a6; color:black; }
+    .alert { background:#ff3b3b; color:white; }
+
+    .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(320px,1fr)); gap:18px; margin-top:18px; }
+    .card { background:#0f1620; padding:14px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.35); }
+    .threat-log { background:#000; color:#00ff66; font-family:Courier, monospace; padding:12px; border-radius:8px; height:240px; overflow-y:auto; border:1px solid #0ad4a6; white-space:pre-wrap; transition:0.3s; }
+
+    .btn { background:#0a84ff; color:white; border:none; padding:10px 14px; margin:8px 6px 0 0; border-radius:8px; cursor:pointer; transition:.3s; font-weight:700; }
+    .btn:hover { transform:translateY(-2px) scale(1.05); background:#0ad4a6; color:black; }
+
+    footer { text-align:center; padding:16px; margin-top:18px; color:#9aa3ad; font-size:.95rem; }
+    canvas { width:100% !important; max-height:260px; transition:0.3s; }
+
+    select, .small-input { padding:8px 10px; border-radius:6px; border:none; background:#0b1720; color:#fff; margin-right:8px; }
+    .metrics { display:flex; gap:14px; flex-wrap:wrap; margin-top:8px; }
+    .metric { background:#071018; padding:10px 12px; border-radius:8px; box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2); transition:0.3s; }
+    .metric strong { display:block; font-size:1.05rem; color:#fff; }
+    .card h3 { margin:0 0 8px 0; color:#cfeff2; }
   </style>
 </head>
 <body>
   <header>
-    <h1>🛡️ MellowTech AI Cybersecurity</h1>
-    <p>Real-Time Threat Detection • Automated Response • Predictive Defense</p>
+    <h1>🛡️ MellowTech AI Cybersecurity Defender</h1>
+    <p>Smart Detection • Instant Defense • Predictive Intelligence</p>
   </header>
 
-  <div class="container">
+  <main class="container">
     <h2>System Overview</h2>
-    <p class="status">Status: <span id="systemStatus" class="online">Online - Monitoring</span></p>
+    <p class="status">Status: <span id="systemStatus" class="online">Online — Monitoring</span></p>
+
+    <div class="metrics">
+      <div class="metric"><small>🔍 Active AI Scans</small><strong id="scanCount">0</strong></div>
+      <div class="metric"><small>🚨 Threats Neutralized</small><strong id="neutralized">0</strong></div>
+      <div class="metric"><small>🧠 AI Confidence</small><strong id="confidence">98%</strong></div>
+      <div class="metric"><small>🔗 Connected Systems</small><strong id="connectedCount">3</strong></div>
+    </div>
 
     <div class="grid">
-      <!-- Threat Log -->
-      <div class="card">
+      <section class="card">
         <h3>Threat Log</h3>
-        <div class="threat-log" id="threatLog">[System Initialized]\n</div>
-        <button class="btn" onclick="simulateThreat()">⚡ Simulate Random Threat</button>
-        <button class="btn" onclick="clearLog()">🧹 Clear Log</button>
-        <button class="btn" onclick="detectInput()">🔍 Detect Custom Input</button>
-      </div>
+        <div class="threat-log" id="threatLog">[System Initialized] ⏱️\n</div>
+        <div style="margin-top:10px;">
+          <button class="btn" onclick="autoDemo()">🤖 Auto Demo Mode</button>
+          <button class="btn" onclick="simulateThreat()">⚡ Random Threat</button>
+          <button class="btn" onclick="activateLearning()">🧠 Train AI (Quick)</button>
+          <button class="btn" onclick="clearLog()">🧹 Clear Log</button>
+        </div>
+      </section>
 
-      <!-- Threat Intelligence Feed -->
-      <div class="card">
+      <section class="card">
         <h3>Threat Intelligence Feed</h3>
-        <ul id="intelFeed"></ul>
-      </div>
+        <ul id="intelFeed" style="padding-left:16px; margin-top:8px;"></ul>
+        <hr style="border:0;border-top:1px solid rgba(10,212,166,.08); margin:12px 0;" />
+        <div>
+          <h4>Connected Systems</h4>
+          <p style="color:#9aa3ad; font-size:.95rem;">Simulated external systems.</p>
+          <select id="externalSystem" class="small-input">
+            <option value="FinanceServer">FinanceServer</option>
+            <option value="HRPortal">HRPortal</option>
+            <option value="CloudDB">CloudDB</option>
+            <option value="Manufacturing-IoT">Manufacturing-IoT</option>
+            <option value="RetailPOS">RetailPOS</option>
+          </select>
+          <button class="btn" onclick="scanExternal()">🖥️ Scan System</button>
+        </div>
+      </section>
 
-      <!-- Attack Simulation -->
-      <div class="card">
-        <h3>Attack Simulation</h3>
-        <button class="btn" onclick="simulateSpecific('DDoS')">🌐 Simulate DDoS</button>
-        <button class="btn" onclick="simulateSpecific('SQL Injection')">💉 Simulate SQL Injection</button>
-        <button class="btn" onclick="simulateSpecific('Malware Upload')">🦠 Simulate Malware</button>
-        <button class="btn" onclick="simulateSpecific('Phishing')">🎣 Simulate Phishing</button>
-      </div>
-
-      <!-- Threat Analytics -->
-      <div class="card">
+      <section class="card">
         <h3>Threat Analytics</h3>
         <canvas id="threatChart"></canvas>
-      </div>
-    </div>
-  </div>
+      </section>
 
-  <footer>
-    Built for Hackathon 2025 🚀 | <b>MellowTech AI Cybersecurity</b>
-  </footer>
+      <section class="card">
+        <h3>System Health</h3>
+        <p>🖥️ CPU Load: <span id="cpuLoad">23%</span></p>
+        <p>💾 Memory Usage: <span id="memory">48%</span></p>
+        <p>🌐 Network Latency: <span id="latency">32ms</span></p>
+        <h4>Manual Input Detection</h4>
+        <input id="manualInput" class="small-input" placeholder="Paste suspicious payload" style="width:100%; margin-bottom:10px;" />
+        <div>
+          <button class="btn" onclick="detectManual()">🔍 Analyze Input</button>
+          <button class="btn" onclick="generateReport()">📄 Generate Report</button>
+        </div>
+      </section>
+    </div>
+  </main>
+
+  <footer>Built for Hackathon 2025 🚀 | <b>MellowTech AI Cybersecurity</b></footer>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script>
-    const log = document.getElementById("threatLog");
-    const status = document.getElementById("systemStatus");
-    const feed = document.getElementById("intelFeed");
-    let threatData = { DDoS: 0, SQL: 0, Malware: 0, Phishing: 0 };
+    const log=document.getElementById('threatLog');
+    const status=document.getElementById('systemStatus');
+    const intelFeed=document.getElementById('intelFeed');
+    const scanCount=document.getElementById('scanCount');
+    const neutralized=document.getElementById('neutralized');
 
-    // Chart.js for analytics
-    const ctx = document.getElementById("threatChart");
-    const chart = new Chart(ctx, {
-      type: "pie",
-      data: {
-        labels: ["DDoS", "SQL Injection", "Malware", "Phishing"],
-        datasets: [{
-          data: [0,0,0,0],
-          backgroundColor: ["#0a84ff","#ff3b3b","#ffa500","#0ad4a6"]
-        }]
-      }
-    });
+    let threats={DDoS:0,SQL:0,Malware:0,Phishing:0}, scans=0, neutralizedCount=0;
 
-    function updateChart() {
-      chart.data.datasets[0].data = [
-        threatData.DDoS, threatData.SQL, threatData.Malware, threatData.Phishing
-      ];
-      chart.update();
-    }
+    const ctx=document.getElementById('threatChart');
+    const threatChart=new Chart(ctx,{ type:'doughnut', data:{ labels:['DDoS','SQL Injection','Malware','Phishing'], datasets:[{data:[0,0,0,0], backgroundColor:['#0a84ff','#ff3b3b','#ffa500','#0ad4a6']}] }, options:{ plugins:{legend:{labels:{color:'#fff'}}}, maintainAspectRatio:false } });
 
-    function addLog(message) {
-      const timestamp = new Date().toLocaleTimeString();
-      log.innerText += `[${timestamp}] ${message}\n`;
-      log.scrollTop = log.scrollHeight;
-    }
+    function updateChart(){ threatChart.data.datasets[0].data=[threats.DDoS,threats.SQL,threats.Malware,threats.Phishing]; threatChart.update(); }
 
-    function addIntel(message) {
-      const li = document.createElement("li");
-      li.textContent = message;
-      feed.prepend(li);
-      if (feed.childElementCount > 6) feed.removeChild(feed.lastChild);
-    }
+    function addLog(msg){ const ts=new Date().toLocaleTimeString(); log.innerText+=`[${ts}] ${msg}\n`; log.scrollTop=log.scrollHeight; }
+    function addIntel(msg){ const li=document.createElement('li'); li.textContent=msg; intelFeed.prepend(li); if(intelFeed.childElementCount>8) intelFeed.removeChild(intelFeed.lastChild); }
 
-    function simulateThreat() {
-      const threats = ["DDoS", "SQL Injection", "Malware", "Phishing"];
-      const pick = threats[Math.floor(Math.random() * threats.length)];
-      simulateSpecific(pick);
-    }
+    function simulateThreat(){ const types=['DDoS','SQL Injection','Malware','Phishing']; simulateSpecific(types[Math.floor(Math.random()*types.length)]); }
 
-    function simulateSpecific(type) {
-      addLog(`⚠️ ${type} attempt detected! Deploying countermeasures...`);
-      status.className = "alert";
-      status.innerText = `⚠️ Mitigating ${type}...`;
-      threatData[type === "SQL Injection" ? "SQL" : type]++;
+    function simulateSpecific(type){ scans++; scanCount.innerText=scans; addLog(`⚠️ ${type} detected. Deploying countermeasures...`); status.className='alert'; status.innerText=`⚠️ Mitigating ${type}...`;
+      setTimeout(()=>{ addLog(`✅ ${type} neutralized.`); threats[type==='SQL Injection'?'SQL':type]++; neutralizedCount++; neutralized.innerText=neutralizedCount; addIntel(`${type} threat blocked.`); status.className='online'; status.innerText='Online — Monitoring'; updateChart(); },2000); }
 
-      setTimeout(() => {
-        addLog(`✅ ${type} successfully blocked.`);
-        addIntel(`${type} threat neutralized.`);
-        status.className = "online";
-        status.innerText = "Online - Monitoring";
-        updateChart();
-      }, 2000);
-    }
+    function clearLog(){ log.innerText='[System Reset]\n'; status.className='online'; status.innerText='Online — Monitoring'; }
 
-    function clearLog() {
-      log.innerText = "[System Reset]\n";
-      status.className = "online";
-      status.innerText = "Online - Monitoring";
-    }
+    function detectManual(){ const val=document.getElementById('manualInput').value.trim(); if(!val) return; addLog(`Analyzing input: ${val}`); setTimeout(()=>{ if(val.toLowerCase().includes('hack')||val.toLowerCase().includes('attack')) simulateSpecific('SQL Injection'); else addLog('✅ Input appears safe.'); },1000); }
 
-    function detectInput() {
-      const input = prompt("Enter suspicious command or text:");
-      if (input) {
-        if (input.toLowerCase().includes("attack") || input.toLowerCase().includes("hack")) {
-          simulateSpecific("SQL Injection");
-        } else {
-          addLog("✅ Input appears safe: " + input);
-        }
-      }
-    }
+    function scanExternal(){ const sys=document.getElementById('externalSystem').value; addLog(`🔗 Scanning external system: ${sys}...`); status.className='alert'; status.innerText=`Scanning ${sys}...`;
+      setTimeout(()=>{ addLog(`✅ Scan complete. ${sys} secure.`); addIntel(`${sys} scanned and safe.`); status.className='online'; status.innerText='Online — Monitoring'; },2000); }
+
+    function autoDemo(){ let count=0; const demo=setInterval(()=>{ simulateThreat(); count++; if(count>5) clearInterval(demo); },2500); }
+    function activateLearning(){ addLog('🧠 AI training initiated...'); setTimeout(()=>{ addLog('✅ AI training complete. Confidence improved.'); confidence.innerText='99%'; },2000); }
+    function generateReport(){ addLog('📄 Generating quick security report...'); setTimeout(()=>{ addLog('✅ Report ready. All threats neutralized.'); },1500); }
   </script>
 </body>
-</html>k
+</html>
