--- a/index.html
+++ b/index.html
@@ -5,34 +5,35 @@
   <title>MellowTech AI Cybersecurity Defender</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body { font-family: 'Segoe UI', Arial, sans-serif; background-color: #0b0f17; color: #f5f5f5; margin:0; padding:0; }
-    header { background: linear-gradient(90deg, #0a84ff, #0ad4a6); padding:22px; text-align:center; color:white; box-shadow:0 0 18px rgba(0,0,0,0.7); }
+    body { font-family:'Segoe UI',Arial,sans-serif; background:#0b0f17; color:#f5f5f5; margin:0; padding:0; }
+    header { background:linear-gradient(90deg,#0a84ff,#0ad4a6); padding:22px; text-align:center; color:white; box-shadow:0 0 18px rgba(0,0,0,0.7); }
     header h1 { margin:0; font-size:2.4rem; }
     header p { margin:6px 0 0; font-size:1rem; opacity:.95; }
-
     .container { max-width:1200px; margin:26px auto; padding:18px; background:#12151b; border-radius:12px; box-shadow:0 0 22px rgba(0,0,0,0.45); }
     h2 { color:#0ad4a6; border-bottom:2px solid #0ad4a6; padding-bottom:6px; }
-
     .status { font-size:1.05rem; margin:12px 0; }
-    .status span { font-weight:700; padding:6px 10px; border-radius:6px; display:inline-block; transition: 0.3s; }
+    .status span { font-weight:700; padding:6px 10px; border-radius:6px; display:inline-block; transition:0.3s; }
     .online { background:#0ad4a6; color:black; }
     .alert { background:#ff3b3b; color:white; }
-
     .grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(320px,1fr)); gap:18px; margin-top:18px; }
     .card { background:#0f1620; padding:14px; border-radius:10px; box-shadow:0 0 10px rgba(0,0,0,0.35); }
     .threat-log { background:#000; color:#00ff66; font-family:Courier, monospace; padding:12px; border-radius:8px; height:240px; overflow-y:auto; border:1px solid #0ad4a6; white-space:pre-wrap; transition:0.3s; }
-
     .btn { background:#0a84ff; color:white; border:none; padding:10px 14px; margin:6px 6px 0 0; border-radius:8px; cursor:pointer; transition:.3s; font-weight:700; }
     .btn:hover { transform:translateY(-2px) scale(1.05); background:#0ad4a6; color:black; }
-
     footer { text-align:center; padding:16px; margin-top:18px; color:#9aa3ad; font-size:.95rem; }
     canvas { width:100% !important; max-height:260px; transition:0.3s; }
-
     select, .small-input { padding:8px 10px; border-radius:6px; border:none; background:#0b1720; color:#fff; margin-right:8px; }
     .metrics { display:flex; gap:14px; flex-wrap:wrap; margin-top:8px; }
     .metric { background:#071018; padding:10px 12px; border-radius:8px; box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2); transition:0.3s; }
     .metric strong { display:block; font-size:1.05rem; color:#fff; }
     .card h3 { margin:0 0 8px 0; color:#cfeff2; }
+    .lights { display:flex; justify-content:center; gap:16px; margin-bottom:10px; }
+    .light { width:40px; height:20px; border-radius:6px; opacity:0.3; box-shadow:0 0 12px rgba(255,255,255,0.2); }
+    .red { background-color:red; animation:flashRed 0.4s infinite alternate; box-shadow:0 0 28px red; }
+    .blue { background-color:blue; animation:flashBlue 0.4s infinite alternate; box-shadow:0 0 28px blue; }
+    .hidden .light { animation:none; opacity:0.1; box-shadow:none; }
+    @keyframes flashRed { 0%{opacity:1; box-shadow:0 0 28px red;} 100%{opacity:0.3; box-shadow:0 0 8px red;} }
+    @keyframes flashBlue { 0%{opacity:1; box-shadow:0 0 28px blue;} 100%{opacity:0.3; box-shadow:0 0 8px blue;} }
   </style>
 </head>
 <body>
@@ -66,6 +67,7 @@
           <button class="btn" onclick="autoContain()">Auto Contain Threats</button>
           <button class="btn" onclick="generateComplianceReport()">Compliance Report</button>
           <button class="btn" onclick="simulateCyberDrill()">Cyber Drill</button>
+          <button class="btn" onclick="testLights()">Test Emergency Lights</button>
         </div>
       </section>
 
@@ -93,6 +95,10 @@
       </section>
 
       <section class="card">
+        <div id="emergency-lights" class="lights hidden">
+          <div class="light red"></div>
+          <div class="light blue"></div>
+        </div>
         <h3>System Health</h3>
         <p>CPU Load: <span id="cpuLoad">23%</span></p>
         <p>Memory Usage: <span id="memory">48%</span></p>
@@ -147,16 +153,50 @@
 
     function simulateThreat(){ const types=['DDoS','SQL Injection','Malware','Phishing']; simulateSpecific(types[Math.floor(Math.random()*types.length)]); }
 
-    function simulateSpecific(type){ scans++; scanCount.innerText=scans; addLog(`${type} detected. Deploying countermeasures...`); status.className='alert'; status.innerText=`Mitigating ${type}...`;
-      setTimeout(()=>{ addLog(`${type} neutralized.`); threats[type==='SQL Injection'?'SQL':type]++; neutralizedCount++; neutralized.innerText=neutralizedCount; addIntel(`${type} threat blocked.`); status.className='online'; status.innerText='Online — Monitoring'; updateChart(); },2000);
+    function activateEmergencyLights() {
+      const lights = document.getElementById('emergency-lights');
+      lights.classList.remove('hidden');
+      setTimeout(() => { lights.classList.add('hidden'); }, 10000);
+    }
+
+    function testLights(){ const lights=document.getElementById('emergency-lights'); if(lights.classList.contains('hidden')){ lights.classList.remove('hidden'); setTimeout(()=>lights.classList.add('hidden'),8000);} else { lights.classList.add('hidden'); }}
+
+    function simulateSpecific(type){ 
+      scans++; scanCount.innerText=scans; 
+      addLog(`${type} detected. Deploying countermeasures...`); 
+      status.className='alert'; status.innerText=`Mitigating ${type}...`; 
+      activateEmergencyLights();
+      setTimeout(()=>{
+        addLog(`${type} neutralized.`); 
+        threats[type==='SQL Injection'?'SQL':type]++; 
+        neutralizedCount++; neutralized.innerText=neutralizedCount; 
+        addIntel(`${type} threat blocked.`); 
+        status.className='online'; status.innerText='Online — Monitoring'; 
+        updateChart(); 
+      },2000);
     }
 
     function clearLog(){ log.innerText='[System Reset]\n'; status.className='online'; status.innerText='Online — Monitoring'; }
 
-    function detectManual(){ const val=document.getElementById('manualInput').value.trim(); if(!val) return; addLog(`Analyzing input: ${val}`); setTimeout(()=>{ if(val.toLowerCase().includes('hack')||val.toLowerCase().includes('attack')) simulateSpecific('SQL Injection'); else addLog('Input appears safe.'); },1000); }
+    function detectManual(){ 
+      const val=document.getElementById('manualInput').value.trim(); 
+      if(!val) return; 
+      addLog(`Analyzing input: ${val}`); 
+      setTimeout(()=>{ 
+        if(val.toLowerCase().includes('hack')||val.toLowerCase().includes('attack')) simulateSpecific('SQL Injection'); 
+        else addLog('Input appears safe.'); 
+      },1000); 
+    }
 
-    function scanExternal(){ const sys=document.getElementById('externalSystem').value; addLog(`Scanning external system: ${sys}...`); status.className='alert'; status.innerText=`Scanning ${sys}...`;
-      setTimeout(()=>{ addLog(`Scan complete. ${sys} secure.`); addIntel(`${sys} scanned and safe.`); status.className='online'; status.innerText='Online — Monitoring'; },2000);
+    function scanExternal(){ 
+      const sys=document.getElementById('externalSystem').value; 
+      addLog(`Scanning external system: ${sys}...`); 
+      status.className='alert'; status.innerText=`Scanning ${sys}...`;
+      setTimeout(()=>{ 
+        addLog(`Scan complete. ${sys} secure.`); 
+        addIntel(`${sys} scanned and safe.`); 
+        status.className='online'; status.innerText='Online — Monitoring'; 
+      },2000);
     }
 
     function autoDemo(){ let count=0; const demo=setInterval(()=>{ simulateThreat(); count++; if(count>5) clearInterval(demo); },2500); }
@@ -169,3 +209,4 @@
   </script>
 </body>
 </html>
+
